fix text clipping into textbox

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,23 @@
-.new-tweet {
+section.new-tweet {
   width: 90%;
   display: flex;
   flex-direction: column;
   margin-bottom: 1.5em;
 }
 
+section.new-tweet form {
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  margin-top: 5px;
+  border: hidden;
+  border-bottom: 3px solid black;
+}
+
 .submit-tweet {
+  padding-top: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -13,13 +25,8 @@
   font-family: 'Bungee', sans-serif;
 }
 
-#submit {
+.submit-tweet button {
   color: #fff;
   background-color: #4056a1;
   border-style: groove;
-}
-
-.tweet-tweet {
-  border-bottom: 6px solid #545149;
-  line-height: 1.3;
 }
